--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "vue2-dropzone": "^3.6.0",
     "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.5",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "sass": "^1.45.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
